<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/pink"
        tools:context=".login.LoginActivity">

    <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?android:attr/actionBarSize"
            android:layout_alignParentStart="true"
            android:background="@color/colorPrimary"
            app:contentInsetStart="0dp"
            app:contentInsetEnd="0dp">

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <com.earnecash.android.widget.BoldTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="Sign in"
                    android:textSize="@dimen/dim_25sp"
                    android:textColor="@color/white"/>
        </RelativeLayout>
    </android.support.v7.widget.Toolbar>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:padding="@dimen/dim_40dp"
            android:layout_below="@+id/toolbar">
        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/logo"
                android:layout_marginTop="@dimen/dim_20dp"/>

        <com.earnecash.android.widget.RegularEditText
                android:id="@+id/tvUsername"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dim_40dp"
                android:layout_marginTop="@dimen/dim_40dp"
                android:background="@drawable/inputbox"
                android:drawableLeft="@drawable/ic_user"
                android:drawablePadding="@dimen/dim_5dp"
                android:padding="@dimen/dim_5dp"
                android:hint="@string/username"
                android:textColorHint="@color/input_border"
                android:textSize="@dimen/dim_13sp"
                android:gravity="center_vertical"
                android:textColor="@color/text_color"
                android:maxLines="1"/>

        <com.earnecash.android.widget.RegularEditText
                android:id="@+id/tvPassword"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dim_40dp"
                android:layout_marginTop="@dimen/dim_25dp"
                android:background="@drawable/inputbox"
                android:drawableLeft="@drawable/ic_lock"
                android:drawablePadding="@dimen/dim_5dp"
                android:padding="@dimen/dim_5dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColorHint="@color/input_border"
                android:textSize="@dimen/dim_13sp"
                android:gravity="center_vertical"
                android:textColor="@color/text_color"
                android:maxLines="1"/>


        <Button
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dim_40dp"
                android:background="@drawable/sky_btn_selector"
                android:layout_marginTop="@dimen/dim_40dp"
                android:textColor="@color/white"
                android:text="@string/login"
                android:textAllCaps="false"
                android:textSize="@dimen/dim_15sp"/>
        <LinearLayout
                android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:visibility="gone"
                android:layout_marginTop="@dimen/dim_30dp">
            <com.earnecash.android.widget.RegularTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/remember"/>

            <android.support.v7.widget.AppCompatCheckBox
                    android:id="@+id/chkRemember"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
        </LinearLayout>


    </LinearLayout>
    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal"
                  android:gravity="center"
                  android:layout_alignParentBottom="true"
                  android:padding="@dimen/dim_40dp">
        <com.earnecash.android.widget.RegularTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dnt_have_acc"/>
        <com.earnecash.android.widget.BoldTextView
                android:id="@+id/tvRegisterNow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dim_5dp"
                android:text="@string/register_now"/>
    </LinearLayout>
</RelativeLayout>