<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/pink"
        android:fillViewport="true"
        tools:context=".login.LoginActivity">

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?android:attr/actionBarSize"
                android:layout_alignParentStart="true"
                android:background="@color/colorPrimary"
                app:contentInsetStart="0dp"
                app:contentInsetEnd="0dp">

            <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                <com.earnecash.android.widget.BoldTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:text="Sign up"
                        android:textSize="@dimen/dim_25sp"
                        android:textColor="@color/white"/>
            </RelativeLayout>
        </android.support.v7.widget.Toolbar>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_horizontal"
                android:paddingRight="@dimen/dim_40dp"
                android:paddingLeft="@dimen/dim_40dp"
                android:paddingTop="@dimen/dim_20dp"
                android:layout_below="@+id/toolbar">
            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/logo"/>

            <com.earnecash.android.widget.RegularEditText
                    android:id="@+id/tvFullName"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dim_40dp"
                    android:layout_marginTop="@dimen/dim_30dp"
                    android:background="@drawable/inputbox"
                    android:drawableLeft="@drawable/ic_user"
                    android:drawablePadding="@dimen/dim_5dp"
                    android:padding="@dimen/dim_5dp"
                    android:hint="@string/full_name"
                    android:textColorHint="@color/input_border"
                    android:textSize="@dimen/dim_13sp"
                    android:gravity="center_vertical"
                    android:textColor="@color/text_color"
                    android:maxLines="1"/>
            <com.earnecash.android.widget.RegularEditText
                    android:id="@+id/tvEmail"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dim_40dp"
                    android:layout_marginTop="@dimen/dim_20dp"
                    android:background="@drawable/inputbox"
                    android:drawableLeft="@drawable/ic_close_envelope"
                    android:drawablePadding="@dimen/dim_5dp"
                    android:padding="@dimen/dim_5dp"
                    android:hint="@string/email"
                    android:textColorHint="@color/input_border"
                    android:textSize="@dimen/dim_13sp"
                    android:gravity="center_vertical"
                    android:textColor="@color/text_color"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"/>

            <com.earnecash.android.widget.RegularEditText
                    android:id="@+id/tvPassword"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dim_40dp"
                    android:layout_marginTop="@dimen/dim_20dp"
                    android:background="@drawable/inputbox"
                    android:drawableLeft="@drawable/ic_lock"
                    android:drawablePadding="@dimen/dim_5dp"
                    android:padding="@dimen/dim_5dp"
                    android:hint="@string/password"
                    android:textColorHint="@color/input_border"
                    android:textSize="@dimen/dim_13sp"
                    android:gravity="center_vertical"
                    android:textColor="@color/text_color"
                    android:inputType="textPassword"
                    android:maxLines="1"/>

            <com.earnecash.android.widget.RegularEditText
                    android:id="@+id/tvConfirmPassword"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dim_40dp"
                    android:layout_marginTop="@dimen/dim_20dp"
                    android:background="@drawable/inputbox"
                    android:drawableLeft="@drawable/ic_lock"
                    android:drawablePadding="@dimen/dim_5dp"
                    android:padding="@dimen/dim_5dp"
                    android:hint="@string/conf_password"
                    android:textColorHint="@color/input_border"
                    android:textSize="@dimen/dim_13sp"
                    android:gravity="center_vertical"
                    android:textColor="@color/text_color"
                    android:inputType="textPassword"
                    android:maxLines="1"/>

            <com.earnecash.android.widget.RegularEditText
                    android:id="@+id/tvMobile"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dim_40dp"
                    android:layout_marginTop="@dimen/dim_20dp"
                    android:background="@drawable/inputbox"
                    android:drawableLeft="@drawable/ic_smartphone_call"
                    android:drawablePadding="@dimen/dim_5dp"
                    android:padding="@dimen/dim_5dp"
                    android:hint="@string/mobile"
                    android:textColorHint="@color/input_border"
                    android:textSize="@dimen/dim_13sp"
                    android:maxLength="10"
                    android:gravity="center_vertical"
                    android:textColor="@color/text_color"
                    android:inputType="phone"
                    android:maxLines="1"/>

            <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dim_40dp"
                    android:layout_marginTop="@dimen/dim_20dp"
                    android:background="@drawable/inputbox"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">
                <Spinner android:layout_width="match_parent" android:layout_height="match_parent"
                         android:id="@+id/spinnerProfession"
                         android:visibility="invisible"/>

                <com.earnecash.android.widget.RegularTextView
                        android:id="@+id/tvProfession"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dim_40dp"
                        android:drawableLeft="@drawable/ic_graduate_cap"
                        android:drawablePadding="@dimen/dim_5dp"
                        android:padding="@dimen/dim_5dp"
                        android:hint="@string/profession"
                        android:textColorHint="@color/input_border"
                        android:textSize="@dimen/dim_13sp"
                        android:gravity="center_vertical"
                        android:textColor="@color/text_color"
                        android:inputType="phone"
                        android:maxLines="1"/>

                <ImageView android:layout_width="@dimen/dim_10dp"
                           android:layout_height="@dimen/dim_10dp"
                           android:src="@drawable/ic_drop_down_arrow"
                           android:layout_marginTop="@dimen/dim_15dp"
                           android:layout_marginRight="@dimen/dim_15dp"
                           android:layout_alignParentRight="true"/>
            </RelativeLayout>

            <com.earnecash.android.widget.RegularEditText
                    android:id="@+id/tvOtherProfession"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dim_40dp"
                    android:layout_marginTop="@dimen/dim_20dp"
                    android:background="@drawable/inputbox"
                    android:drawableLeft="@drawable/ic_graduate_cap"
                    android:drawablePadding="@dimen/dim_5dp"
                    android:padding="@dimen/dim_5dp"
                    android:hint="@string/profession"
                    android:textColorHint="@color/input_border"
                    android:textSize="@dimen/dim_13sp"
                    android:gravity="center_vertical"
                    android:textColor="@color/text_color"
                    android:visibility="gone"
                    android:maxLines="1"/>

            <com.earnecash.android.widget.RegularEditText
                    android:id="@+id/tvRef"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dim_40dp"
                    android:layout_marginTop="@dimen/dim_20dp"
                    android:background="@drawable/inputbox"
                    android:drawableLeft="@drawable/ic_share_option"
                    android:drawablePadding="@dimen/dim_5dp"
                    android:padding="@dimen/dim_5dp"
                    android:hint="@string/ref_code"
                    android:textColorHint="@color/input_border"
                    android:textSize="@dimen/dim_13sp"
                    android:gravity="center_vertical"
                    android:textColor="@color/text_color"
                    android:inputType="phone"
                    android:maxLines="1"/>
            <Button
                    android:id="@+id/btnSignUp"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dim_40dp"
                    android:background="@drawable/sky_btn_selector"
                    android:layout_marginTop="@dimen/dim_20dp"
                    android:textColor="@color/white"
                    android:text="@string/signup"
                    android:textAllCaps="false"
                    android:textSize="@dimen/dim_15sp"/>

            <LinearLayout android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:orientation="horizontal"
                          android:gravity="center"
                          android:layout_marginBottom="@dimen/dim_20dp"
                          android:layout_marginTop="@dimen/dim_20dp"
                          android:layout_alignParentBottom="true">
                <com.earnecash.android.widget.RegularTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/do_have_acc"/>
                <com.earnecash.android.widget.BoldTextView
                        android:id="@+id/tvLoginNow"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/dim_5dp"
                        android:text="@string/login_now"/>
            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>
</ScrollView>